--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,7 +13,7 @@ jobs:
           - windows-latest
           - macOS-latest
         nim-version:
-          - stable
+          # - stable
           - devel
         exclude:
           - os: macos-latest
