CI on mac; fwd nim to task tests

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,9 +15,9 @@ jobs:
         nim-version:
           # - stable
           - devel
-        exclude:
-          - os: macos-latest
-            nim-version: devel
+        # exclude:
+        #   - os: macos-latest
+        #     nim-version: devel
     steps:
     - name: Checkout
       uses: actions/checkout@v2
